# extract_firefox_cookies

./: Cargo.toml  README.md
src/: cli.rs  main.rs  types.rs
