[package]
name = "extract_firefox_cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
lz4 = "1.24.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.1.0"
tempfile = "3.8.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
