[package]
name = "extract_firefox_cookies"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive"] }
lz4 = "1.24.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
shellexpand = "3.1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
