[package]
name = "extract_firefox_cookies"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.75"
clap = { version = "4.5.27", features = ["derive"] }
lz4 = "1.28.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shellexpand = "3.1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
